--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ images/.svn/entries
 images/.svn/prop-base/logo.jpg.svn-base
 
 images/.svn/text-base/logo.jpg.svn-base
+
+node_modules/
+package-lock.json
+package.json
